# oauth2-server

./: .gitignore  .hlint.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  build.sh  cabal.project  cabal.project.freeze  oauth-server.cabal  oauth.cabal  oauth2-server.cabal
.github/workflows/: docker-ci.yml
scripts/: release.sh  test-in-docker.sh
src/: OAuth.hs
src/OAuth/: AuthorizeAPI.hs  AuthorizeCallbackAPI.hs  MetadataAPI.hs  RegisterAPI.hs  TokenAPI.hs  Types.hs
src/Web/: OAuth.hs  OAuth2.hs
src/Web/OAuth/: AuthorizeAPI.hs  AuthorizeCallbackAPI.hs  Internal.hs  MetadataAPI.hs  RegisterAPI.hs  TokenAPI.hs  Types.hs
src/Web/OAuth2/: AuthorizeAPI.hs  AuthorizeCallbackAPI.hs  Internal.hs  MetadataAPI.hs  RegisterAPI.hs  TokenAPI.hs  Types.hs
test/: Main.hs
test/Web/OAuth/: AuthorizeCallbackSpec.hs  AuthorizeSpec.hs  FlowSpec.hs  MetadataSpec.hs  RegisterSpec.hs  TestUtils.hs  TokenSpec.hs
test/Web/OAuth2/: AuthorizeCallbackSpec.hs  AuthorizeSpec.hs  FlowSpec.hs  MetadataSpec.hs  RegisterSpec.hs  TestUtils.hs  TokenSpec.hs
tests/: Main.hs
tests/OAuth/: FlowSpec.hs  TestUtils.hs
