cabal-version:      2.2
name:               oauth-server
version:            0.2.0.0
license:            MPL-2.0
license-file:       LICENSE
author:             DPella AB
extra-doc-files:    CHANGELOG.md, README.md
maintainer:         matti@dpella.io,
                    lobo@dpella.io
synopsis:           OAuth 2.1 authorization server implementation
description:
  Provides a cohesive Servant implementation of the OAuth 2.1 surface, covering
  discovery metadata, authorization and callback flows, token issuance, and dynamic
  client registration. The package models authorization codes, refresh tokens, and
  registered clients with PKCE enforcement, configurable persistence backends, and
  secure token generation helpers. Combined servers share state through `MVar`s,
  integrate with `servant-auth-server` to mint JWT access tokens, and expose ergonomic
  helpers for embedding standards-compliant OAuth flows into Haskell applications.
homepage:          https://github.com/DPella/oauth-server
bug-reports:       https://github.com/DPella/oauth-server/issues
category:          Web, Security

source-repository head
  type:     git
  location: https://github.com/DPella/oauth-server.git

library
  default-language:
    Haskell2010
  default-extensions:
      DataKinds
    , FlexibleInstances
    , GADTs
    , GeneralizedNewtypeDeriving
    , ImportQualifiedPost
    , LambdaCase
    , OverloadedStrings
    , PolyKinds
    , RankNTypes
    , TypeApplications
    , TypeFamilies
  hs-source-dirs:
    src
  exposed-modules:
    Web.OAuth
    Web.OAuth.Types
    Web.OAuth.Internal
  other-modules:
    Web.OAuth.TokenAPI
    Web.OAuth.AuthorizeAPI
    Web.OAuth.AuthorizeCallbackAPI
    Web.OAuth.RegisterAPI
    Web.OAuth.MetadataAPI
  build-depends:
      base >=4.18 && <4.22
    , servant
    , servant-server
    , servant-auth-server
    , servant-blaze
    , text
    , bytestring
    , aeson
    , containers
    , time
    , random
    , blaze-html
    , network-uri
    , http-api-data
    , http-types
    , cryptonite
    , memory
    , base64-bytestring
    , transformers


test-suite test-oauth-server
  type: exitcode-stdio-1.0
  default-language:
    Haskell2010
  default-extensions:
      DataKinds
    , FlexibleInstances
    , GADTs
    , GeneralizedNewtypeDeriving
    , ImportQualifiedPost
    , LambdaCase
    , OverloadedStrings
    , PolyKinds
    , RankNTypes
    , TypeApplications
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    Web.OAuth.AuthorizeCallbackSpec
    Web.OAuth.AuthorizeSpec
    Web.OAuth.FlowSpec
    Web.OAuth.MetadataSpec
    Web.OAuth.RegisterSpec
    Web.OAuth.TestUtils
    Web.OAuth.TokenSpec
  build-depends:
      base >=4.18 && <4.22
    , oauth-server
    , aeson
    , text
    , bytestring
    , containers
    , time
    , async
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , servant
    , servant-server
    , servant-auth-server
    , servant-blaze
    , network-uri
    , http-api-data
    , wai
    , wai-extra
    , http-types
    , http-client
    , warp
    , cryptonite
    , memory
    , scientific
    , base64-bytestring
    , blaze-html
    , blaze-markup
    , transformers
