cabal-version:      2.2
name:               oauth
version:            0.2.0.0
license:            MPL-2.0
license-file:       LICENSE
author:             DPella AB
extra-doc-files:    CHANGELOG.md, README.md
maintainer:         matti@dpella.io,
                    lobo@dpella.io
synopsis:           OAuth 2.1 authorization server implementation
description:
  Provides a cohesive Servant implementation of the OAuth 2.1 surface, covering
  discovery metadata, authorization and callback flows, token issuance, and dynamic
  client registration. The package models authorization codes, refresh tokens, and
  registered clients with PKCE enforcement, configurable persistence backends, and
  secure token generation helpers. Combined servers share state through `MVar`s,
  integrate with `servant-auth-server` to mint JWT access tokens, and expose ergonomic
  helpers for embedding standards-compliant OAuth flows into Haskell applications.
homepage:          https://github.com/DPella/oauth
bug-reports:       https://github.com/DPella/oauth/issues
category:          Web, Security

library
  default-language:
    Haskell2010
  default-extensions:
      DataKinds
    , FlexibleInstances
    , GADTs
    , GeneralizedNewtypeDeriving
    , ImportQualifiedPost
    , LambdaCase
    , OverloadedStrings
    , PolyKinds
    , RankNTypes
    , TypeApplications
  hs-source-dirs:
    src
  exposed-modules:
    Web.OAuth
    Web.OAuth.Types
  other-modules:
    Web.OAuth.TokenAPI
    Web.OAuth.AuthorizeAPI
    Web.OAuth.AuthorizeCallbackAPI
    Web.OAuth.RegisterAPI
    Web.OAuth.MetadataAPI
  build-depends:
      base >=4.18 && <4.19
    , servant >=0.20.3.0 && <0.21
    , servant-server >=0.20.3.0 && <0.21
    , servant-auth-server >=0.4.9.1 && <0.5
    , servant-blaze >=0.9.1 && <0.10
    , text >=2.0.2 && <2.1
    , bytestring >=0.11.5.3 && <0.12
    , aeson >=2.2.3.0 && <2.3
    , containers >=0.6.7 && <0.7
    , time >=1.12.2 && <1.13
    , random >=1.3.1 && <1.4
    , blaze-html >=0.9.2.0 && <0.10
    , network-uri >=2.6.4.2 && <2.7
    , http-api-data >=0.6.2 && <0.7
    , http-types >=0.12.4 && <0.13
    , cryptonite >=0.30 && <0.31
    , memory >=0.18.0 && <0.19
    , base64-bytestring >=1.2.1.0 && <1.3


test-suite test-oauth
  type: exitcode-stdio-1.0
  default-language:
    Haskell2010
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    Web.OAuth.AuthorizeCallbackSpec
    Web.OAuth.AuthorizeSpec
    Web.OAuth.FlowSpec
    Web.OAuth.MetadataSpec
    Web.OAuth.RegisterSpec
    Web.OAuth.TestUtils
    Web.OAuth.TokenSpec
  build-depends:
      base >=4.18 && <4.19
    , oauth
    , aeson
    , text
    , bytestring
    , containers
    , time
    , async
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , servant
    , servant-server
    , servant-auth-server
    , wai
    , wai-extra
    , http-types
    , http-client
    , warp
    , cryptonite
    , memory
    , scientific
    , base64-bytestring
    , blaze-html
    , blaze-markup
